--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "mocha": "^7.1.1"
+  },
+  "dependencies": {
+    "minimist": "^1.2.5"
   }
 }
