--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
     "mocha": "^7.1.1"
   },
   "dependencies": {
-    "minimist": "^1.2.5"
+    "cheerio": "^1.0.0-rc.3",
+    "minimist": "^1.2.5",
+    "rehype-format": "^3.0.1",
+    "rehype-sanitize": "^3.0.1",
+    "rehype-stringify": "^7.0.0",
+    "remark-parse": "^8.0.2",
+    "remark-rehype": "^6.0.0",
+    "unified": "^9.0.0"
   }
 }
